--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,9 +24,9 @@
     outline: none;
 }
 
- ul {
-     list-style:none;
- }
+ul {
+    list-style:none;
+}
 html,body {
     width: 100%;
     height: 100%;
@@ -44,6 +44,29 @@ a {
     text-decoration: none;
 }
 
+body::-webkit-scrollbar {
+    width: 2vh;
+    position:fixed;
+    height:2vh;
+    z-index:5;
+    background: rgb(34, 25, 65);
+}
+body::-webkit-scrollbar-button {
+    background: white;
+    display:none;
+}
+body::-webkit-scrollbar-track-piece {
+    background: rgb(34, 25, 65);
+}
+body::-webkit-scrollbar-thumb {
+    background: rgb(182, 173, 218);
+}
+body::-webkit-scrollbar-corner {
+    background: rgb(34, 25, 65);
+}
+body::-webkit-resizer {
+    background: rgb(34, 25, 65);
+}
 
 /*nav*/
 .nav {
@@ -63,8 +86,17 @@ a {
 }
 
 .logo {
+    position: relative;
+    
+    top:0.3vh;
     display: flex;
     align-items:  center;
+    font-size: 2.2vh;
+}
+
+.logo a {
+    height: 100%;
+    position: relative;
 }
 
 .logo h1 {
@@ -72,10 +104,10 @@ a {
 }
 
 .logo .small {
-    font-size: 2.2vh;
-    margin-left:1vh;
     position:relative;
     top:0.3vh;
+    margin-left:1vh;
+    font-size: 2.2vh;
 }
 
 
@@ -119,42 +151,41 @@ a {
 .top-button {
     width: 7vh;
     height: 7vh;
-    background-color:  rgb(255, 255, 255);
-    border-radius: 50%;
     position: fixed;
-    top: 88%;
-    left: 93%;
-    z-index: 999;
-    box-shadow: 3px 5px 20px #2929293d;
+    z-index: 500;
+    bottom: 5vh;
+    right: 5vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;    
+    border-radius: 50%;
+    background-color:  rgb(255, 255, 255);
+    box-shadow: 3px 5px 20px #2929293d;
     cursor: pointer;
 }
 
 .top-button h1 {
+    z-index: 500;
     font-size: 1.5vh;
-    z-index: 1000;
 }
 
 .top-button:before {
     content: '';
-    display: block;
-    position: absolute;
-    border-radius: 50%;
     width: 100%;
     height: 100%;
+    position: absolute;
+    border-radius: 50%;
     top: 0;
-    left: 0;
-    animation: pulse-animation 1s ease-in infinite;
+    right: 0;
+    display: block;
     background-color:rgb(255, 255, 255);
+    animation: pulse-animation 1s linear infinite;
 } 
 
 @keyframes  pulse-animation{
-    0%{opacity:0.7;transform:scale(1)}
-    50%{opacity:0;transform:scale(1.3)}
+    0%{opacity:0.5;transform:scale(1)}
+    50%{opacity:0.25;transform:scale(1.25)}
     100%{opacity:0;transform:scale(1.5)}
 }
-
 
