--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+   <meta charset="UTF-8">
     <title>성교 </title>
     <%= csrf_meta_tags %>
     
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <%# <script src="https://apis.google.com/js/platform.js" async defer></script> %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%# <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %> %>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
      <link href='https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css' rel='stylesheet' type='text/css'>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%# <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %> %>
     <meta name="google-signin-client_id" content="336256666389-timddavdks14cnn1jhqv6qqpcjuo4s37.apps.googleusercontent.com">
    
     <link rel="shortcut icon" type="image/x-icon" href="/assets/peach.ico" />
@@ -41,7 +43,7 @@
     <div class="nav">
       <div class="logo">
         <a href="/">
-         <%= image_tag("성교한글1.svg", {:style=> "height: 15vh;width: auto;top:0.3vh;position:relative;"}) %>
+         <%# <%= image_tag("성교한글1.svg", {:style=> "height: 15vh;width: auto;top:0.3vh;position:relative;"})  %>
         <a href="/" class="small">性스러운 가르침</a>
      
       </div>
@@ -65,7 +67,7 @@
           <% if user_signed_in? %>
           
             <a class="nav-menu" href="/user/index" >
-               <%= image_tag("account.svg", {:style=> "top:0vh;height:4vh;"}) %>
+               <%= image_tag("account.svg", {:style=> "top:0vh;height:4vh;"}) %>oo9pp0pop0;lpopopollp00op9p09ol'[';p;ol']
               <h1 style="top:-0.8vh">Account</h1>     
             </a>
             <%= link_to destroy_user_session_path, method: :delete, :class => "nav-menu" do%>
