--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -1,61 +1,57 @@
-
 <div class="education-main">
-    <div class="education-main-chart-box">
-        <div class="education-main-chart">
-            
+    <div class="education-main-chart">
+        <div class="education-main-chart-box">
             <h1 style="color:white;font-size: 3.5vh;padding:3.5vh 2vh 3.5vh 2.5vh;width:100%;display:block;background-color:#2e284d">카테고리</h1>
-            <div class="education-main-chart-item-box">
-                
+            <div class="education-main-chart-box-item">
                 <h1 class="chart-title">
                 <%= image_tag("sex1.svg", {:style=> "position:relative;top:0.2vh;width: 3.5vh;height:3.5vh;margin-right:0.8vh;"}) %>
                 Sex</h1>
-               
-                <div class="education-main-chart-item">
-                    <div id="category-1" class="education-main-chart-item-each" onclick="move_contraception()">
+                <div class="education-main-chart-box-item-box">
+                    <div id="category-1" class="education-main-chart-box-item-box-each" onclick="move_contraception()">
                         <%= image_tag("arrow4.svg")%>
                         <h1>피임</h1>
                     </div>
-                    <div id="category-2" class="education-main-chart-item-each"  onclick="move_disease()" >
+                    <div id="category-2" class="education-main-chart-box-item-box-each"  onclick="move_venereal()" >
                         <%= image_tag("arrow4.svg")%>
                         <h1>성병</h1>
                     </div>
-                    <div id="category-" class="education-main-chart-item-each"  onclick="move_disease()">
+                    <div id="category-" class="education-main-chart-box-item-box-each"  onclick="move_venereal()">
                         <%= image_tag("arrow4.svg")%>
                         <h1>성생활</h1>
                         <h2>콘텐츠 준비중</h2>
                     </div>
                 </div>
             </div>
-            <div class="education-main-chart-item-box">
-                <h1 class="chart-title" >
+            <div class="education-main-chart-box-item">
+                <h1 class="chart-title">
                 <%= image_tag("gender.svg", {:style=> "position:relative;top:0.2vh;width: 4vh;height:4vh;margin-right:1vh;"}) %>
                 Gender</h1>
-                <div class="education-main-chart-item">
-                    <div id="category-3" class="education-main-chart-item-each" onclick="move_genderequality()">
+                <div class="education-main-chart-box-item-box">
+                    <div id="category-3" class="education-main-chart-box-item-box-each" onclick="move_genderequality()">
                         <%= image_tag("arrow4.svg")%>
                         <h1>젠더 다양성</h1>
                     </div>
-                    <div id="category-4" class="education-main-chart-item-each" onclick="move_media()">
+                    <div id="category-4" class="education-main-chart-box-item-box-each" onclick="move_media()">
                         <%= image_tag("arrow4.svg")%>
                         <h1>미디어</h1>
                     </div>
-                     <div id="category-" class="education-main-chart-item-each" onclick="move_media()">
+                     <div id="category-" class="education-main-chart-box-item-box-each" onclick="move_media()">
                         <%= image_tag("arrow4.svg")%>
                         <h1>데이트</h1>
                         <h2>콘텐츠 준비중</h2>
                     </div>
                 </div>
             </div>
-            <div class="education-main-chart-item-box">
-                <h1 class="chart-title" >
+            <div class="education-main-chart-box-item">
+                <h1 class="chart-title">
                 <%= image_tag("etc.svg", {:style=> "position:relative;top:0.2vh;width: 3vh;height:3vh;margin-right: 1.6vh;margin-left:0.5vh;"}) %>
                     Etc</h1>
-                <div class="education-main-chart-item">
-                    <div id="category-5" class="education-main-chart-item-each" onclick="move_reference()">
+                <div class="education-main-chart-box-item-box">
+                    <div id="category-5" class="education-main-chart-box-item-box-each" onclick="move_browsing()">
                         <%= image_tag("arrow4.svg")%>
                         <h1>구경거리</h1>
                     </div>
-                    <div id="category-6" class="education-main-chart-item-each"  onclick="move_qna()">
+                    <div id="category-6" class="education-main-chart-box-item-box-each"  onclick="move_qna()">
                         <%= image_tag("arrow4.svg")%>
                         <h1>Q&A</h1>
                     </div>
@@ -65,41 +61,41 @@
         </div>
     </div>
     
-    <div class="education-main-box-content">
+    <div class="education-main-box">
         <div id="pin-1" class="airpin">
-            <div id="disease" class="education-main-box">
+            <div id="contraception" class="education-main-box-content">
                 <%= image_tag("고민3.png")%>
                 <a href="/education/contraception"><button>피임법 알아보기!</button></a>
             </div>
         </div>
-       <div id="pin-2" class="airpin">
-            <div id="contraception" class="education-main-box">
+        <div id="pin-2" class="airpin">
+            <div id="venereal" class="education-main-box-content">
                 <%= image_tag("고민.png")%>
                 <a href="/education/venereal">
                 <button>성병 진단하기!</button>
                 </a>
             </div>
-       </div>
+        </div>
         <div id="pin-3" class="airpin">
-            <div id="genderequality"  class="education-main-box">
+            <div id="genderequality"  class="education-main-box-content">
                 <%= image_tag("젠더.png")%>
                 <a href="/education/genderequality"> <button>싸운 이유 보기!</button></a>
             </div>
         </div>
          <div id="pin-4" class="airpin">
-            <div id="media"  class="education-main-box">
-                <%= image_tag("미디어.png" {:style=> height:20vh;}) %>
+            <div id="media"  class="education-main-box-content">
+                <%= image_tag("미디어1.png") %>
                  <a href="/education/genderequality"> <button>미디어 파헤치기!</button></a>
             </div>
         </div>
         <div id="pin-5" class="airpin">
-            <div id="reference"  class="education-main-box">
+            <div id="browsing"  class="education-main-box-content">
                 <%= image_tag("미디어.png")%>
                 <button><%=link_to "구경거리 보러가기!", education_reference2_path, remote:true %></button>
             </div>
         </div>
         <div id="pin-6" class="airpin">
-            <div id="qna"  class="education-main-box">
+            <div id="qna"  class="education-main-box-content">
                <%= image_tag("질문.png")%>
             <a href="https://open.kakao.com/o/s2nOBrW"><button>질문하러 가기!</button></a> 
             </div>
@@ -113,23 +109,22 @@
     if (scroll_position ==0) {
         $("#category-1").css({"background-color":"#292445"});
     }
-    $("body").css({"overflow-x": "hidden"})
+    // $("body").css({"overflow-x": "hidden"})
     
     $(window).scroll(function() {
         scroll_position =  $(window).scrollTop();
         if ($("#pin-1").length) {
             if (scroll_position >= $("#pin-1").offset().top && scroll_position  < $("#pin-2").offset().top-$(".nav").height()) {
-                
-                $("#disease").css({"position":"fixed"});
+                $("#contraception").css({"position":"fixed"});
                 $("#category-1").css({"background-color":"#292445"});
                 $("#category-1").parent().css({"background-color":"#211d38 "});
                 $("#category-3").parent().css({"background-color":"initial "});
                 $("#category-1").parent().parent().css({"background-color":"#25203e "});
                 $("#category-3").parent().parent().css({"background-color":"initial"});
                 $("#category-2").css({"background-color":"transparent"});
-                $("#contraception").css({"position":"relative", top: "0"});
+                $("#venereal").css({"position":"relative", top: "0"});
             } else if (scroll_position > $("#pin-2").offset().top-$(".nav").height() && scroll_position  < $("#pin-3").offset().top-$(".nav").height()) {
-                $("#contraception").css({"position":"fixed", top: "9vh"});
+                $("#venereal").css({"position":"fixed", top: "9vh"});
                 $("#category-2").css({"background-color":"#292445"});
                 $("#category-1").css({"background-color":"transparent"});
                 $("#category-3").css({"background-color":"transparent"});
@@ -182,16 +177,17 @@
 
     })
 
+    /*메뉴클릭*/
     function move_contraception() {
     var offset = $("#pin-1").offset().top-$(".nav").height();
     $('html, body').animate({scrollTop : offset}, 800);
     }
-     function move_disease() {
+    function move_venereal() {
     var offset = $("#pin-2").offset().top-$(".nav").height();
     $('html, body').animate({scrollTop : offset}, 800);
 
     }
-     function move_genderequality() {
+    function move_genderequality() {
     var offset = $("#pin-3").offset().top-$(".nav").height();
     $('html, body').animate({scrollTop : offset}, 800);
     }
@@ -199,11 +195,11 @@
     var offset = $("#pin-4").offset().top-$(".nav").height();
     $('html, body').animate({scrollTop : offset}, 800);
     }
-    function move_reference() {
+    function move_browsing() {
     var offset = $("#pin-5").offset().top-$(".nav").height();
     $('html, body').animate({scrollTop : offset}, 800);
     }
-     function move_qna() {
+    function move_qna() {
     var offset = $("#pin-6").offset().top-$(".nav").height();
     $('html, body').animate({scrollTop : offset}, 800);
     }
