--- a/app/assets/stylesheets/education.scss
+++ b/app/assets/stylesheets/education.scss
@@ -3,54 +3,51 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 /* 메인페이지 */
-
 .education-main {
     width: 100%;
     height: 100%;
     display: flex;
 }
 
-.education-main-chart-box {
-    width: 20%;
-    height: 100%;
-    
-}
 .education-main-chart {
-    position: fixed;
-    padding-top: 9vh;
-    width: 20%;
+    width: 35vh;
     height: 100%;
+    position: fixed;
+}
+
+.education-main-chart-box {
+    height: 100%;
+    position:relative;
+    z-index: 500;
+    padding-top: 9vh;
     background-color: #1c182f;
     box-shadow: 2vh 0vh 3vh rgba(34, 34, 34, 0.137);
-    z-index: 500;
 }
 
-.education-main-chart-item-box {
+.education-main-chart-box-item {
     width: 100%;
     padding: 1.7vh 0vh 0vh 0vh;
-    
 }
 
-.education-main-chart-item-box h1 {
+.education-main-chart-box-item h1 {
     color: white;
-    
 }
 
 .chart-title {
     margin-left: 2vh;
-    font-size: 2.5vh;
-    cursor: pointer;
     padding-bottom: 1.3vh;
     display: flex;
     align-items: center;
-    
+    font-size: 2.5vh;
+    cursor: pointer;
 }
 
-.education-main-chart-item {
+.education-main-chart-box-item-box {
     width: 100%;
+    height: 100%;
 }
 
-.education-main-chart-item-each {
+.education-main-chart-box-item-box-each {
     width: 100%;
     height: 6vh;
     display: flex;
@@ -58,32 +55,50 @@
     align-items: center;
     cursor: pointer;
     img {
+        height: 2.5vh;
+        width: 2.5vh;
         position:relative;
         top:0.2vh;
-        margin-left: 3vw;
-        width: 2.5vh;
-        height: 2.5vh;
+        margin-left: 4vh;
     }
 }
-.education-main-chart-item-each h1 {
-    font-size: 1.8vh;
+.education-main-chart-box-item-box-each h1 {
     margin-left: 0.5vw;
+    font-size: 1.8vh;
 }
 
-.education-main-chart-item-each h2 {
-    font-size: 1.5vh;
-    color:rgb(80, 67, 102);
+.education-main-chart-box-item-box-each h2 {
     margin-left:1vh;
-    font-weighT: 300;
-}
-
-.education-main-box-content {
-    width:80%;
-    height: 100%;
+    color:rgb(80, 67, 102);
+    font-weight: 300;
+    font-size: 1.5vh;
 }
 
 .education-main-box {
-    width: 80vw;
+    width: 100vw;
+    width: -moz-calc(100vw - 37vh);
+    width: calc(100vw - 37vh);
+    width: -webkit-calc(100vw - 37vh);
+    position:absolute;
+    margin-left:35vh;
+    display:flex;
+    flex-direction:column;
+}
+
+.airpin {
+    width: 100vw;
+    width: -moz-calc(100vw - 37vh);
+    width: calc(100vw - 37vh);
+    width: -webkit-calc(100vw - 37vh);
+    height: 100vh;
+    position: relative;
+}
+
+.education-main-box-content {
+    width: 100vw;
+    width: -moz-calc(100vw - 37vh);
+    width: calc(100vw - 37vh);
+    width: -webkit-calc(100vw - 37vh);
     display: flex;
     flex-direction: column;
     justify-content:  center;
@@ -99,15 +114,10 @@
     }
 }
 
-.airpin {
-    width: 100%;
-    height: 100%;
-}
 
 
-
-#disease {
-    background: #ffe26f url("교육바탕.png") 100% 100% repeat;
+#contraception {
+    background: #ffe26f url('교육바탕.png') 100% 100% repeat;
     height: 100vh;
     padding-top: 9vh;
     position:relative;
@@ -131,7 +141,7 @@
     }
 }
 
-#disease::before {
+#contraception::before {
     content: '';
     width: 20vh;
     height: 18vh;
@@ -143,8 +153,9 @@
     background-repeat: no-repeat;
 }
 
-#contraception {
+#venereal {
     background: #f3825f url("교육바탕.png") 30% 30% repeat;
+    height: 91.4vh;
     img {   
         width: 34vh;
         height: 26vh;
@@ -167,7 +178,7 @@
 }
 
 
-#contraception::before {
+#venereal::before {
     content: '';
     width: 20vh;
     height: 20vh;
@@ -179,7 +190,7 @@
     background-repeat: no-repeat;
 }
 
-#pin-2, #contraception {
+#pin-2, #venereal {
     height: 91.4vh;
 }
 
@@ -283,7 +294,7 @@
     height: 91.4vh;
 }
 
-#reference {
+#browsing {
     background-color: #563761;
     background-color: #122533;
     a {
@@ -316,7 +327,7 @@
     }
 }
 
-#pin-5, #reference  {
+#pin-5, #browsing  {
     height: 91.4vh;
 }
 
