--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,3 +53,8 @@
   </div>
 </div>
 
+<script>
+   $(".login-session-container").css({"width":"100vh","height":"100vh"});
+   $(".login-session").css({"min-height":"120%"});
+    $(".field").css({"width":"40vh"});
+</script>
