--- a/app/assets/stylesheets/login.scss.erb
+++ b/app/assets/stylesheets/login.scss.erb
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     height: 100%;
     padding-top: 9vh;
-    background: rgb(255, 182, 87) url("login.png") 100% 100% repeat;
+    background: rgb(255, 182, 87) url(<%= asset_path 'login.png' %>) 100% 100% repeat;
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -104,14 +104,14 @@
 
 .login-session-explain {
     box-sizing: border-box;
-    position:absolute;
+    position:fixed;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     padding-right: 1%;
-    top: 93%;
-    left:0;
+    bottom: 3vh;
+    right:2vh;
 }
 
 .login-session-explain > h1, h2 {
