--- a/app/assets/stylesheets/quiz.scss.erb
+++ b/app/assets/stylesheets/quiz.scss.erb
@@ -16,7 +16,7 @@
     width: 100%;
     height: 100vh;
     padding-top: 9vh;
-    background: #c94a58 url("교육바탕.png") 0 0 repeat;
+    background: #c94a58 url(<%= asset_path '교육바탕.png'%>) 0 0 repeat;
     background-size: 70% 70%;
 }
 
@@ -39,7 +39,7 @@
     top:-8%;
     left:85%;
     z-index:999;
-    background: url("dogsay.png") no-repeat;
+    background: url(<%= asset_path 'dogsay.png'%>) no-repeat;
     transform: rotate(10deg);
     background-size: 100% 100%;
     animation: toggle-animation1 1.2s linear infinite;
@@ -124,7 +124,7 @@
     height: 100vh;
     position: relative;
     overflow: hidden;
-    background: url("빗금.png") 0 0 repeat;
+    background: url(<%=asset_path '빗금.png'%>) 0 0 repeat;
     background-size: 20% auto; 
     z-index:0;
 }
