--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="main-2">
-    <%=image_tag("home-index/빗금.png", {:class=>"main-2-back"})%>
+   
     <div class="main-2-left-container">
             <div class="main-2-left-container-top">
                 <h1>성교육</h1>
@@ -43,21 +43,21 @@
     <div class="main-2-right-container">
         <div class="main-2-right-container-each">
             <div class="main-2-right-container-each-circle">
-                 <%=image_tag("home-index/재미없어.gif")%>
+                 <%=image_tag("home-index/nofun.gif")%>
             </div>
             <h1>밀려오는 지루함;;</h1>
             <h2>언제 끝나는 걸까?</h2>
         </div>
         <div class="main-2-right-container-each">
             <div class="main-2-right-container-each-circle">
-                 <%=image_tag("home-index/어쩌라고.png")%>
+                 <%=image_tag("home-index/fuckoff.png")%>
             </div>
             <h1>말도 안되는 내용?!</h1>
             <h2>저걸 가르쳐서 무슨 소용?</h2>
         </div>
         <div class="main-2-right-container-each">
             <div class="main-2-right-container-each-circle">
-                 <%=image_tag("home-index/실질적이지않아.jpg")%>
+                 <%=image_tag("home-index/noreal.jpg")%>
             </div>
             <h1>이미 다 아는걸...</h1>
             <h2>내가 정말 궁금한건 달라!</h2>
@@ -76,21 +76,21 @@
         </div>
         <div class="main-3-container-bottom">
             <div class="main-3-container-bottom-explain">
-                <%=image_tag("home-index/재미없어.gif")%>
+                <%=image_tag("home-index/nofun.gif")%>
                 <div class="main-3-container-bottom-explain-box">
                     <h1>노잼 성교육은 안녕!</h1>
                     <h2>요즘 누가 긴 줄글로 가득한 책 읽니? 내가 궁금한 것만 뽑아서 볼 수 있는 맞춤형 서비스부터 실생활에서 노출되었던 젠더 경험에 대한 게임 서비스까지! 성교 클라스~~bb</h2>
                 </div>
             </div>
             <div class="main-3-container-bottom-explain">
-                <%=image_tag("home-index/어쩌라고.png")%>
+                <%=image_tag("home-index/fuckoff.png")%>
                 <div class="main-3-container-bottom-explain-box">
                     <h1>아니 그래서 어쩌라고? 실질적인 성교육 좀!!</h1>
                     <h2>정자와 난자의 움직임보다는 나의 성생활이 먼저인데, 정작 내가 궁금한 점에 대한 답은 어디에? 바로 성교에! 피임, 성병, 젠더문제 등 우리가 찾게 되는 성지식만 속속들이 모아져있다구!</h2>
                 </div>
             </div>
             <div class="main-3-container-bottom-explain">
-               <%=image_tag("home-index/실질적이지않아.jpg")%>
+               <%=image_tag("home-index/noreal.jpg")%>
                 <div class="main-3-container-bottom-explain-box">
                     <h1>나만 궁금한거 천지야? 다른 사람들의 질문도 궁금해!</h1>
                     <h2>다들 쉬쉬하니까 내가 물어볼 곳이 없잖아..?ㅠㅠ 상담서비스 말고 다른 사람들의 이야기도 듣고 싶고, 궁금한 것도 편하게 물어보고 싶어! 우리들의 이야기를 해보는거얏!!</h2>
@@ -116,8 +116,8 @@
 
 
 <div class="main-4-1">
-    <%=image_tag("home-index/빗금.png", {:class=>"main-4-1-back"})%>
-    <%=image_tag("home-index/빈칸채우기.svg", {:class=>"main-4-1-container"})%> 
+  
+    <%=image_tag("home-index/black.svg", {:class=>"main-4-1-container"})%> 
 </div>
 
 <div class="main-4-2">
