--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -157,9 +157,9 @@
                 $("#category-3").parent().parent().css({"background-color":"#25203e "});
                 $("#category-1").parent().parent().css({"background-color":"initial"});
                 $("#category-5").parent().parent().css({"background-color":"initial"});
-                $("#reference").css({"position":"relative",top: "0"});
+                $("#browsing").css({"position":"relative",top: "0"});
             } else if (scroll_position >= $("#pin-5").offset().top-$(".nav").height() && scroll_position < $("#pin-6").offset().top-$(".nav").height()) {
-                $("#reference").css({"position":"fixed", top: "9vh"});
+                $("#browsing").css({"position":"fixed", top: "9vh"});
                 $("#category-5").css({"background-color":"#292445 "});
                 $("#category-5").parent().parent().css({"background-color":"#25203e "});
                 $("#category-3").parent().parent().css({"background-color":"initial"});
