--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
     <%=image_tag("main-1-back.png", {:class=>"main-1-back"})%>
     <div class="main-1-container">
         <div class="main-1-title">
-            <img src='/assets/메인보드글자.svg'>
+             <%=image_tag("메인보드글자.svg" )%>
         </div>
         <h1>그런적 있지 않아?</h1>
         <h2>가끔씩 이렇지 않아? 나만 그래? 라고<br>
